--- a/layouts/_default/event.html
+++ b/layouts/_default/event.html
@@ -7,5 +7,6 @@
     <!-- location -->
     <p><i class="ti-location-pin text-primary mr-2"></i>{{ .Params.Location | markdownify }}</p>
     <h4 class="card-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
+    <p class="card-text">{{ .Summary | truncate 100 }}</p>
   </div>
 </div>
