--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -22,7 +22,7 @@
 					<hr>
 					<ul class="list-inline">
 						{{ range .Params.Social }}
-						<li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
+						<li class="list-inline-item"><a href="{{ .link | safeURL }}"><i class="mx-3 {{ .icon }}"></i></a></li>
 						{{ end }}
 					</ul>
 				</div>
