--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -333,7 +333,8 @@ textarea.form-control{
   h4,
   h5,
   h6 {
-    margin-bottom: 10px;
+    margin-top: 3rem;
+    margin-bottom: 30px;
   }
 
   ol {
