--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,9 +1,9 @@
 // Color Variables
-$primary-color: #0e9948;
-$secondary-color: #193732;
-$text-color: #527767;
-$text-color-light: #3ea47a;
-$text-color-dark: #1e4b29;
+$primary-color: #2b9136;
+$secondary-color: #0a360f;
+$text-color: #18501d;
+$text-color-light: #3ea458;
+$text-color-dark: #123e16;
 $text-lighten: #c3c3cc;
 $text-muted: #a5a5a6;
 $body-color: #fff;
